# inverse_kinematics

inverse_kinematics/: CMakeLists.txt  package.xml
inverse_kinematics/include/inverse_kinematics/: set_kinematics.h
inverse_kinematics/msg/: dynamixel_msg.h  info_kinematics_msg.msg  inverse_kinematics_coordinate_msg.msg
inverse_kinematics/src/: Moving_point.cpp  Play_Kinematics.cpp  Serial.cpp  inverse_kinematics.cpp  inverse_kinematics.cpp.BN2970  kbQ.cpp  pid_control_float.cpp
inverse_kinematics/src/Header/: Motion_msg.h  Moving_point.h  Play_Kinematics.h  Serial.h  kbQ.h  myARS.h  pid_control_float.h  robocup_vision_msg.h
inverse_kinematics/src/motion/: init_s_3.h  init_s_4.h  walk_init
